# ml-playground

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: base.yaml
scripts/: run_smollm2_demo.sh  run_smollm2_eval.sh  run_smollm2_finetune.sh  run_smollm2_gguf.sh  run_train.sh
src/ml_playground/: __init__.py  eval.py  smollm2_demo.py  smollm2_eval.py  smollm2_finetune.py  smollm2_gguf.py  train.py
src/ml_playground/data/: __init__.py
src/ml_playground/models/: __init__.py
src/ml_playground/smollm2/: __init__.py  common.py  demo.py  eval.py  finetune.py
src/ml_playground/utils/: __init__.py
tests/: test_run_scripts.py  test_smollm2_demo.py  test_smollm2_eval.py  test_smollm2_finetune.py  test_smollm2_gguf.py
